--- a/style.css
+++ b/style.css
@@ -5,16 +5,18 @@
 
 .box{
     border: 10px solid black;
-    width:200px;
-    height:100px;
+    width:600px;
+    height:230px;
     
   
 }
 
 #b1,#b2,#b3{
     background-color: tomato;
-    margin-left: 20px;
-    width:30px;
+    
+    width:90px;
+    height:90px;
+    border-radius: 50px;
 }
 .btn{
  background-color: silver;   
@@ -27,15 +29,41 @@ justify-content: space-around;
 
 .bttn{
     margin-top:10%;
+
+    display:flex;
+    flex-direction: column;
+    align-items:center;
     
 }
 
 .head{
     display:flex;
-    width:220px;
+    width:600px;
     flex-direction: row;
     justify-content: space-evenly;
 }
 .eye{
     width:40px;
+}
+#textboxt{
+    text-align: center;
+    width:600px;
+}
+
+
+#b1{
+    background-image: url(rock.jpg);
+    background-size: 100px 100px;
+    background-repeat: no-repeat;
+}
+#b2{
+    background-image: url(paper.jpg);
+    background-size: contain;
+    
+    
+}
+#b3{
+    background-image: url(scissors.jpg);
+    background-size: 100px;
+    
 }
