--- a/style.css
+++ b/style.css
@@ -4,9 +4,13 @@
 
 
 .box{
-    border: 10px solid black;
-    width:600px;
-    height:230px;
+    
+    width:100%;
+    height:200px;
+    margin: 0px;
+    border: black 1px solid;
+    position:relative;
+    left: -1px;
     
   
 }
@@ -24,8 +28,18 @@ width:100%;
 height:100%;
 display:flex;
 justify-content: space-around;
+position:relative;
 
 }
+
+
+.title{
+    text-align: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+
 
 .bttn{
     margin-top:10%;
@@ -38,12 +52,14 @@ justify-content: space-around;
 
 .head{
     display:flex;
-    width:600px;
+    width:100%;
     flex-direction: row;
     justify-content: space-evenly;
 }
 .eye{
-    width:40px;
+    width:90px;
+    
+    
 }
 #textboxt{
     text-align: center;
@@ -71,10 +87,10 @@ justify-content: space-around;
     height:100px;
     width:600px;
     display:flex;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 10px;
 }
-#playbutton{
+#playbutton,#resetbutton{
     width:50px;
     height:50px;
     background-color:lightcoral;
@@ -86,7 +102,7 @@ justify-content: space-around;
 #GARRET{
     display:flex;
     flex-align: space-around;
-    width:600px;
+    width:620px;
     justify-content: center;
     height: 24px;
     
@@ -99,4 +115,30 @@ justify-content: space-around;
     text-align:center;
     
 
+}
+.Wrapper{
+    display: flex;
+    
+    
+    width: 100vw;
+    height: 100vh;
+    background-color: blanchedalmond;
+    justify-content: center;
+    
+    
+}
+.body{
+    border: solid black 1px;
+    height: 600px;
+    margin-top: 50px;
+    padding: 0px;
+
+    
+    
+}
+body{
+    margin: 0;
+    display:flex;
+    justify-content: space-around;
+    
 }
